# AgenticAI

LeaveMgmt/: README.md  SAMPLE_PROMPTS.md  gitignore  init_db.py  pyproject.toml  runner.py
LeaveMgmt/docs/: architecture.md
LeaveMgmt/leave_agent/: __init__.py  agent.py  database.py  tools.py
