[project]
name = "leave-management-agent"
version = "0.1.0"
description = "Conversational multi-agent employee leave management system (Google ADK)"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.0",
    "google-genai>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leave_agent"]
